--- a/app/index.html
+++ b/app/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Restauracja  - Gustowna Cerata</title>
+    <title>Restauracja - Gustowna Cerata</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/restaurant.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="main/css/main.css"/>
 </head>
 <body data-ng-app="restaurant">
-    <section data-ng-controller="tableController">
-        <h1>Welcome to Gustowna Cerata</h1>
-        <figure data-ng-repeat="table in tablesData.tables"
-                data-state="{{table.state}}" 
-                class="table {{isSelected(table)}}" 
-                >
-            <figcaption  data-ng-click="select(table)">{{table.id}}</figcaption>
-            <div>
-                <ul data-ng-show="isOccupied(table)">
-                    <li data-ng-repeat="offerPosition  in tablesData.offer" data-ng-click="addPosition(offerPosition, table)">{{offerPosition.description}} </li>
-                </ul>
-                <ul data-ng-show="isOccupied(table)">
-                    <li data-ng-repeat="pos in getOrder(table).positions">{{pos.offerName}}</li>
-                </ul>
-            </div>
-            <menu>
-                <button data-ng-show="!isOccupied(table)" data-ng-click="occupy(table)">OCCUPY</button>
-                <button data-ng-show="isOccupied(table)" data-ng-click="free(table)">FREE</button>
-                <button data-ng-show="isOccupied(table)" data-ng-click="submit(table)">SUBMIT</button>
-            </menu>
-            <button class="close" data-ng-click="close(table)">X</button>    
-        </figure>
-    </section>
+
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Gustowna Cerata</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</nav>
+
+<div class="container" ng-controller="MainCntl">
+
+    <div class="starter-template">
+        <h1>{{message}} World!</h1>
+    </div>
+
+</div>
 
 
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <!-- endbower -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<!-- endbower -->
 
-    <script src="js/restaurant.js"></script>
-    <script src="//localhost:35729/livereload.js"></script>
-    <div data-spinner="globalSpinner"></div>
+<script src="main/js/app.js"></script>
+<script src="main/js/main.controller.js"></script>
+
+<script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
