--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="main/css/main.css"/>
 </head>
-<body data-ng-app="restaurant">
+<body data-ng-app="restaurant" ng-controller="MainCntl">
 
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
@@ -17,28 +17,18 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
                     aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">Gustowna Cerata</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#/tables">Tables</a></li>
             </ul>
         </div>
-        <!--/.nav-collapse -->
     </div>
 </nav>
 
-<div class="container" ng-controller="MainCntl">
-
-    <div class="starter-template">
-        <h1>{{message}} World!</h1>
-    </div>
+<div class="container" ng-view>
 
 </div>
 
@@ -47,10 +37,15 @@
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
 <!-- endbower -->
 
 <script src="main/js/app.js"></script>
 <script src="main/js/main.controller.js"></script>
+<script src="table-mgmt/js/table-mgmt.module.js"></script>
+<script src="table-mgmt/js/tables.controller.js"></script>
+<script src="table-mgmt/js/tables.service.js"></script>
+<script src="table-mgmt/js/table-view.controller.js"></script>
 
 <script src="//localhost:35729/livereload.js"></script>
 </body>
