--- a/app/table-mgmt/html/table-view.html
+++ b/app/table-mgmt/html/table-view.html
@@ -1,4 +1,4 @@
 <div>
-    <h1>Table View # {{table.id}}</h1>
-    <h3>Table loction: {{table.location}}</h3>
+    <h1>Table Details # {{table.id}}</h1>
+    <h3>Table Loction: {{table.location}}</h3>
 </div>
