--- a/app/table-mgmt/html/tables.html
+++ b/app/table-mgmt/html/tables.html
@@ -2,7 +2,7 @@
     <h1>Tables</h1>
     <section>
         <p ng-repeat="table in tables">#{{table.id}} &nbsp;
-            <a href="#/table-view/{{table.id}}" class="btn btn-info">View</a>
+            <a href="#/table-details/{{table.id}}" class="btn btn-info">View</a>
         </p>
     </section>
 </div>
