--- a/app/index.html
+++ b/app/index.html
@@ -1,56 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Restauracja - Gustowna Cerata</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="main/css/main.css"/>
-</head>
-<body data-ng-app="restaurant">
-
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Gustowna Cerata</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
+<html>
+<body>
+<div>
+    <div>
+        <h1>Hello World!</h1>
     </div>
-</nav>
-
-<div class="container" ng-controller="MainCntl">
-
-    <div class="starter-template">
-        <h1>{{message}} World!</h1>
-    </div>
-
 </div>
 
-
 <!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script src="bower_components/angular/angular.js"></script>
 <!-- endbower -->
-
-<script src="main/js/app.js"></script>
-<script src="main/js/main.controller.js"></script>
 
 <script src="//localhost:35729/livereload.js"></script>
 </body>
