--- a/app/table-mgmt/html/table-details.html
+++ b/app/table-mgmt/html/table-details.html
@@ -1,4 +1,5 @@
 <div>
     <h1>Table Details # {{table.id}}</h1>
-    <h3>Table Loction: {{table.location}}</h3>
+    <h3>Table State: {{table.state}}</h3>
+    <button class="btn btn-primary" ng-click="occupy()">Occupy</button>
 </div>
