--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
 <!-- endbower -->
 
 <script src="main/js/app.js"></script>
